[package]
name = "integration-tests"
version = "0.1.0"
description = "Crate containing Zingo-Proxy 'Wallet-to-Node' tests."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zingoproxy-testutils = { path = "../zingoproxy-testutils" }
zingo-rpc = { path = "../zingo-rpc" }

# ZingoLib
zingo-netutils = { workspace = true }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "mob-release-1.4.2" }

# Miscellaneous Workspace
tokio = { workspace = true }
