[package]
name = "zingoproxy-testutils"
version = "0.1.0"
description = "Crate containing Zingo-Proxy test specific functionality."
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
# NOTE: Deprecated
nym_poc = []

[dependencies]
zingo-rpc = { path = "../zingo-rpc" }
zingo-proxyd = { path = "../zingo-proxyd" }

# ZingoLib
zingo-testutils = { git = "https://github.com/zingolabs/zingolib.git", tag = "mob-release-1.4.2" }
zingoconfig = { git = "https://github.com/zingolabs/zingolib.git", tag = "mob-release-1.4.2" }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "mob-release-1.4.2" }

# Miscellaneous Workspace
tokio = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }

# Miscellaneous Crate
ctrlc = "3.2.1" # "3.4.4"
tempfile = "3.2.0" # "3.10.1"
chrono = "0.4.19" # "0.4.38"
portpicker = "0.1.1"
